--- a/clg _form.html
+++ b/clg _form.html
@@ -44,6 +44,8 @@
             <input type="tel" name="phone number">
             DOB:
             <input type="date" name="date of birth">
+            <input type="checkbox" name="Terms and conditions" value="accept">I agree to the terms and conditions
+            
             <input type="submit" name="finalize" style="margin: 20px;font-size: x-large; font-weight: bolder;background-color: white; ">
         </pre>
     </form>
